@@ -13,6 +13,7 @@ package org.junit.jupiter.params;
 import java.util.Arrays;
 import java.util.Optional;
 
+import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.extension.ExtensionConfigurationException;
 import org.junit.jupiter.api.extension.ExtensionContext;
 import org.junit.jupiter.api.extension.ExtensionContext.Namespace;
@@ -36,6 +37,7 @@ class ArgumentCountValidator {
 	}
 
 	void validate(ExtensionContext extensionContext) {
+		validateRequiredArgumentsArePresent();
 		ArgumentCountValidationMode argumentCountValidationMode = getArgumentCountValidationMode(extensionContext);
 		switch (argumentCountValidationMode) {
 			case DEFAULT, NONE -> {
@@ -45,15 +47,32 @@ class ArgumentCountValidator {
 					this.arguments);
 				int totalCount = this.arguments.getTotalLength();
 				Preconditions.condition(consumedCount == totalCount,
-					() -> "Configuration error: @%s consumes %s %s but there %s %s %s provided.%nNote: the provided arguments were %s".formatted(
-						this.declarationContext.getAnnotationName(), consumedCount,
-						pluralize(consumedCount, "parameter", "parameters"), pluralize(totalCount, "was", "were"),
-						totalCount, pluralize(totalCount, "argument", "arguments"),
-						Arrays.toString(this.arguments.getAllPayloads())));
+					() -> wrongNumberOfArgumentsMessages("consumes", consumedCount, null, null));
 			}
 			default -> throw new ExtensionConfigurationException(
 				"Unsupported argument count validation mode: " + argumentCountValidationMode);
 		}
+	}
+
+	private void validateRequiredArgumentsArePresent() {
+		var requiredParameterCount = this.declarationContext.getResolverFacade().getRequiredParameterCount();
+		if (requiredParameterCount != null) {
+			var totalCount = this.arguments.getTotalLength();
+			Preconditions.condition(requiredParameterCount.value() <= totalCount,
+				() -> wrongNumberOfArgumentsMessages("has", requiredParameterCount.value(), "required",
+					requiredParameterCount.reason()));
+		}
+	}
+
+	private String wrongNumberOfArgumentsMessages(String verb, int actualCount, @Nullable String parameterAdjective,
+			@Nullable String reason) {
+		int totalCount = this.arguments.getTotalLength();
+		return "Configuration error: @%s %s %s %s%s%s but there %s %s %s provided.%nNote: the provided arguments were %s".formatted(
+			this.declarationContext.getAnnotationName(), verb, actualCount,
+			parameterAdjective == null ? "" : parameterAdjective + " ",
+			pluralize(actualCount, "parameter", "parameters"), reason == null ? "" : " (due to %s)".formatted(reason),
+			pluralize(totalCount, "was", "were"), totalCount, pluralize(totalCount, "argument", "arguments"),
+			Arrays.toString(this.arguments.getAllPayloads()));
 	}
 
 	private ArgumentCountValidationMode getArgumentCountValidationMode(ExtensionContext extensionContext) {
